--- a/Src/FastData.Demo/wwwroot/index.html
+++ b/Src/FastData.Demo/wwwroot/index.html
@@ -29,7 +29,7 @@
       </div>
       <div>
         <label for="sizeInput">Array Size</label>
-        <input id="sizeInput" max="256" min="8" type="number" value="16" aria-label="Array size">
+        <input id="sizeInput" max="256" min="8" type="number" value="20" aria-label="Array size">
       </div>
     </div>
 
@@ -71,6 +71,7 @@
     <ol class="pseudocode" id="pseudocodeList"></ol>
     <p class="status" id="statusLine" role="status" aria-live="polite">Ready.</p>
     <p class="comparison" id="comparisonLine" role="status" aria-live="polite">Comparison details will appear here.</p>
+    <p class="bounds-info" id="boundsLine" role="status" aria-live="polite"></p>
     <div class="legend">
       <span><i class="dot checking"></i>Checking</span>
       <span><i class="dot bound"></i>Bounds</span>
