--- a/Src/FastData.Demo/wwwroot/index.html
+++ b/Src/FastData.Demo/wwwroot/index.html
@@ -22,6 +22,12 @@
       <option value="eytzinger">Eytzinger Search</option>
     </select>
 
+    <label for="viewModeInput">View</label>
+    <select id="viewModeInput" aria-label="Select visualization mode">
+      <option value="array">Array</option>
+      <option value="tree">Tree</option>
+    </select>
+
     <div class="row two-col">
       <div>
         <label for="targetInput">Target</label>
