Refactor demo code

--- a/Src/FastData.Demo/wwwroot/index.html
+++ b/Src/FastData.Demo/wwwroot/index.html
@@ -14,7 +14,7 @@
 <main class="layout">
   <section class="panel controls">
     <label for="algorithmSelect">Algorithm</label>
-    <select id="algorithmSelect" aria-label="Select algorithm">
+    <select aria-label="Select algorithm" id="algorithmSelect">
       <option value="linear">Linear Search</option>
       <option value="binary">Binary Search</option>
       <option value="interpolation">Interpolation Search</option>
@@ -23,7 +23,7 @@
     </select>
 
     <label for="viewModeInput">View</label>
-    <select id="viewModeInput" aria-label="Select visualization mode">
+    <select aria-label="Select visualization mode" id="viewModeInput">
       <option value="array">Array</option>
       <option value="tree">Tree</option>
     </select>
@@ -31,23 +31,23 @@
     <div class="row two-col">
       <div>
         <label for="targetInput">Target</label>
-        <input id="targetInput" type="number" value="42" aria-label="Target value">
+        <input aria-label="Target value" id="targetInput" type="number" value="42">
       </div>
       <div>
         <label for="sizeInput">Array Size</label>
-        <input id="sizeInput" max="256" min="8" type="number" value="20" aria-label="Array size">
+        <input aria-label="Array size" id="sizeInput" max="256" min="8" type="number" value="20">
       </div>
     </div>
 
     <label for="speedInput">Speed</label>
-    <input id="speedInput" max="8" min="1" type="range" value="4" aria-label="Animation speed">
+    <input aria-label="Animation speed" id="speedInput" max="8" min="1" type="range" value="4">
 
     <details class="advanced-panel">
       <summary>Advanced options</summary>
       <div class="row two-col">
         <div>
           <label for="datasetModeInput">Dataset Mode</label>
-          <select id="datasetModeInput" aria-label="Dataset mode">
+          <select aria-label="Dataset mode" id="datasetModeInput">
             <option value="random">Random</option>
             <option value="uniform">Uniform</option>
             <option value="clustered">Clustered</option>
@@ -56,17 +56,17 @@
         </div>
         <div>
           <label for="seedInput">Seed</label>
-          <input id="seedInput" type="number" value="42" aria-label="Random seed">
+          <input aria-label="Random seed" id="seedInput" type="number" value="42">
         </div>
       </div>
     </details>
 
     <div class="row button-row">
-      <button id="resetBtn" type="button" aria-label="Reset simulation">Reset</button>
+      <button aria-label="Reset simulation" id="resetBtn" type="button">Reset</button>
     </div>
     <div class="row button-row">
-      <button id="playPauseBtn" type="button" aria-label="Play or pause simulation">Play</button>
-      <button id="stepBtn" type="button" aria-label="Run one step">Step</button>
+      <button aria-label="Play or pause simulation" id="playPauseBtn" type="button">Play</button>
+      <button aria-label="Run one step" id="stepBtn" type="button">Step</button>
     </div>
   </section>
 
@@ -75,9 +75,9 @@
     <p id="algorithmDescription"></p>
     <p class="badge" id="complexityBadge"></p>
     <ol class="pseudocode" id="pseudocodeList"></ol>
-    <p class="status" id="statusLine" role="status" aria-live="polite">Ready.</p>
-    <p class="comparison" id="comparisonLine" role="status" aria-live="polite">Comparison details will appear here.</p>
-    <p class="bounds-info" id="boundsLine" role="status" aria-live="polite"></p>
+    <p aria-live="polite" class="status" id="statusLine" role="status">Ready.</p>
+    <p aria-live="polite" class="comparison" id="comparisonLine" role="status">Comparison details will appear here.</p>
+    <p aria-live="polite" class="bounds-info" id="boundsLine" role="status"></p>
     <div class="legend">
       <span><i class="dot checking"></i>Checking</span>
       <span><i class="dot bound"></i>Bounds</span>
